Update html files

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Movie Insight</title>
+  <title>Movie Explorer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Movie Insight</h1>
+    <h1>Movie Explorer</h1>
     <form id="search-form">
       <input type="text" id="search-input" placeholder="Search for movies..." />
       <button type="submit">Search</button>
@@ -30,6 +30,7 @@
     </div>
   </div>
 
+  <script src="config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
